# markov-switching

./: .gitignore  README.md  pyproject.toml  requirements.txt
MS-AR/: data.ipynb  model.ipynb
MS-AR/data/: gdp_yoy.csv
Multivariate/: DFM-GaussianHMM.ipynb  Data.ipynb  Direct-GaussianHMM.ipynb  PCA-GaussianHMM.ipynb  data.ipynb
Multivariate/data/: macro_panel.csv  macro_panel_standardized.csv  standard_scaler.pkl
